fix overflow issue

--- a/src/components/atoms/ActionButton/ActionButton.scss
+++ b/src/components/atoms/ActionButton/ActionButton.scss
@@ -1,7 +1,7 @@
 .action-button {
     position: fixed;
     z-index: 500;
-    top: 83dvh;
+    top: calc(100% - var(--navbar-height) - 4rem);
     right: 1rem;
     height: 3.5rem;
     width: 3.5rem;
