--- a/src/components/organisms/HabitForm/HabitForm.scss
+++ b/src/components/organisms/HabitForm/HabitForm.scss
@@ -84,6 +84,7 @@ legend {
     flex-direction: column;
     gap: 2rem;
     margin-bottom: 4rem;
+    overflow: hidden;
 }
 
 .form-box-weekdays {
